fix style truncate-toggle

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -247,3 +247,7 @@ input, select, textarea {
 p{
     line-height: 30px !important;
 }
+
+.truncate-toggle{
+    text-align: center;
+}
